// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel selector channel selector 1`] = `
Immutable.ChannelState {
  "spentFilterValue": 38,
  "id": "this-is-a-test-id",
  "message": "Message written in the input",
  "messages": Immutable.Record {
    "loader": Immutable.Record {
      "loading": true,
      "message": "Test loading message",
    },
    "data": Immutable.List [
      Immutable.Map {
        "id": 0,
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message 0",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 1,
        "type": 1,
        "createdAt": 1551956628,
        "message": "This is some message 1",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 2,
        "type": 1,
        "createdAt": 1551949428,
        "message": "This is some message 2",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      Immutable.Map {
        "id": 3,
        "type": 1,
        "createdAt": 1551942228,
        "message": "This is some message 3",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
    ],
    "errors": "",
  },
  "members": "0",
}
`;

exports[`Channel selector data selector 1`] = `
Immutable.Map {
  "id": "this-is-a-test-id",
  "name": "Channel this-is-a-test-id",
  "private": false,
  "hash": "test-hash-this-is-a-test-id",
  "address": "zs1testaddressthis-is-a-test-id",
  "unread": "this-is-a-test-id",
  "description": "Channel about this-is-a-test-id",
  "keys": Immutable.Map {
    "ivk": "incoming-viewing-key-this-is-a-test-id",
  },
}
`;

exports[`Channel selector loader 1`] = `
Immutable.Record {
  "loading": true,
  "message": "Test loading message",
}
`;

exports[`Channel selector message selector 1`] = `"Message written in the input"`;

exports[`Channel selector messages selector 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 3,
    "type": 1,
    "createdAt": 1551942228,
    "message": "This is some message 3",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "fromYou": false,
  },
  Immutable.Map {
    "message": "This is some message test-message-id-3",
    "error": null,
    "spent": "23.23",
    "status": "success",
    "fromYou": false,
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "type": 1,
    "id": "test-operation-id-3",
    "createdAt": 1551945828,
  },
  Immutable.Map {
    "id": 2,
    "type": 1,
    "createdAt": 1551949428,
    "message": "This is some message 2",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "fromYou": false,
  },
  Immutable.Map {
    "id": 1,
    "type": 1,
    "createdAt": 1551956628,
    "message": "This is some message 1",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "fromYou": false,
  },
  Immutable.Map {
    "message": "This is some message test-message-id",
    "error": null,
    "spent": "23.23",
    "status": "success",
    "fromYou": false,
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "type": 1,
    "id": "test-operation-id",
    "createdAt": 1551960228,
  },
  Immutable.Map {
    "id": 0,
    "type": 1,
    "createdAt": 1551963828,
    "message": "This is some message 0",
    "spent": "23.23",
    "sender": Immutable.Map {
      "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    },
    "fromYou": false,
  },
]
`;

exports[`Channel selector pendingMessages 1`] = `
Immutable.Map {
  "test-operation-id": Immutable.Operation {
    "opId": "test-operation-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id",
        "type": 1,
        "createdAt": 1551960228,
        "message": "This is some message test-message-id",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      "channelId": "this-is-a-test-id",
    },
    "txId": "transaction-id",
    "error": null,
    "status": "success",
  },
  "test-operation-id-3": Immutable.Operation {
    "opId": "test-operation-id-3",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id-3",
        "type": 1,
        "createdAt": 1551945828,
        "message": "This is some message test-message-id-3",
        "spent": "23.23",
        "sender": Immutable.Map {
          "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
        },
      },
      "channelId": "this-is-a-test-id",
    },
    "txId": "transaction-id-3",
    "error": null,
    "status": "success",
  },
}
`;

exports[`Channel selector spent filter value selector 1`] = `38`;
